# HelloAR

./: App.tsx  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/helloar/: ARView.kt  ARViewManager.kt  ARViewNative.kt  ARViewPackage.kt  ARViewRegistry.kt  AppLifeCycleListener.kt  CurrentActivityTracker.java  HelloAppSystem.kt  MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: ARSessionManager.h  ARViewNativeWrapper.cpp  ARViewNativeWrapper.h  AndroidPlatformServices.cpp  AndroidPlatformServices.h  BackgroundRenderer.cpp  BackgroundRenderer.h  CMakeLists.txt  HelloARApplication.h  HelloARApplicationWrapper.h  OnLoad.cpp  PlaneRenderer.cpp  PlaneRenderer.h  Texture.cpp  Texture.h  utils.cc  utils.h
docs/: arview-native-bindings-checklist.md
ios/: Podfile
ios/HelloAR/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/HelloAR.xcodeproj/: project.pbxproj
ios/HelloAR.xcodeproj/xcshareddata/xcschemes/: HelloAR.xcscheme
ios/HelloAR.xcworkspace/: contents.xcworkspacedata
shared/: NativeARModule.cpp  NativeARModule.h
specs/: ARViewNativeComponent.ts  NativeARModule.ts  NativeARView.ts
